2004-02-09  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/i686/memcmp.S: New file.  Patch by HJ Lu.

2003-12-05  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/i386/syscalls.list: Turn vm86 into vm86old
	for vm86@GLIBC_2.0 version.  Add new vm86@GLIBC_2.3.4.
	* sysdeps/unix/sysv/linux/i386/Versions (libc: GLIBC_2.3.4): Add vm86.
	* sysdeps/unix/sysv/linux/i386/sys/vm86.h: Update vm86 prototype.

2004-02-09  Ulrich Drepper  <drepper@redhat.com>

	* nis/ypclnt.c: Cleanup last patch.

2004-02-09  Andreas Jaeger  <aj@suse.de>

	* configure.in: Remove glibcbug creation.
	* configure: Regenerated.

	* sysdeps/x86_64/fpu/s_copysignf.S: Only load 4 bytes.

2004-02-03  Thorsten Kukuk  <kukuk@suse.de>

	* nis/ypclnt.c (__yp_bind_client_create): New, small chunk
	of duplicated code from __yp_bind.
	(__yp_bind_file): New, binding dir code from __yp_bind.
	(__yp_bind_client_create): New, ypbind code from __yp_bind.
	(__ypclnt_call): New, make NIS query.
	(do_ypcall): At first use cached data, then try data from
	binding directory, after this ask ypbind for a working ypserv.
	Based on a patch from Jeff Bastian <jmbastia@ti.com> and
	Chris Barrera <cbarrera@ti.com>

2004-01-19  Roland McGrath  <roland@redhat.com>

	* configure.in: Don't set CCVERSION.
	* configure: Regenerated.
	* glibcbug.in: File removed.
	* Makefile (install-bin-script): Remove glibcbug.
	(glibcbug): Target removed.
	(distclean-1): Don't rm glibcbug.
	(distribute): Remove glibcbug.in.

2004-02-09  Roland McGrath  <roland@redhat.com>

	* time/tzset.c (tzset_internal): Cap hour in POSIX $TZ rule format to
	24, not 23.

2004-01-29  Roland McGrath  <roland@redhat.com>

	* io/ftwtest-sh: Use $tmp consistently, not literal /tmp.
	Reported by Kevin P. Fleming <kpfleming@backtobasicsmgmt.com>.

2004-02-09  Ulrich Drepper  <drepper@redhat.com>

	* libio/genops.c (_IO_cleanup): Do not use locking when flushing
	the buffers.  Some thread might be using a stream.
